# SimpleNN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: NeuralNetwork.h  Types.h  WeightsGeneration.h  matrix_operations.h  neural_network.h  neural_network_impl.h  types.h  weights_generation.h  weights_generation_impl.h
src/: NeuralNetwork.cpp  WeightsGeneration.cpp  weights_generation.cpp
